apps/nginx-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployment-test
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
